Changes in 3-0-0 project files according to ApplicationConfigTest to pass this test