@@ -2,11 +2,11 @@ package com.bobocode.dao;
 
 import com.bobocode.TestDataGenerator;
 import com.bobocode.model.Account;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.stream.Stream;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * {@link FakeAccountDao} implements {@link AccountDao} using fake data. Instead of storing and fetching accounts from
@@ -16,13 +16,17 @@ import static java.util.stream.Collectors.toList;
  * Its bean is called "accountDao". And it uses constructor with explicit autowired annotation in order to inject
  * {@link TestDataGenerator} instance.
  */
+
+@Component
 public class FakeAccountDao implements AccountDao {
+
     private List<Account> accounts;
 
+    @Autowired
     public FakeAccountDao(TestDataGenerator testDataGenerator) {
         this.accounts = Stream.generate(testDataGenerator::generateAccount)
                 .limit(20)
-                .collect(toList());
+                .toList();
     }
 
     @Override
